--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -50,6 +50,9 @@
             font-size: 1rem;
             background-color: transparent;
 
+            &.is-current-link {
+                color: #fabb69;
+            }
         }
     }
 }
