--- a/app/assets/styles/modules/_sprite.css
+++ b/app/assets/styles/modules/_sprite.css
@@ -1,7 +1,11 @@
 /* Don't edit modules/_sprite.css directly as it is generated automatially by Gulp.  Instead, edit gulp/templates/sprite. */
 
     .icon {
-        background-image: url('/assets/images/sprites/sprite-0f9283b3.svg');
+        background-image: url('../../assets/images/sprites/sprite-0f9283b3.svg');
+    }
+
+    .no-svg .icon {
+      background-image: url('../../assets/images/sprites/');
     }
 
     .icon--clear-view-escapes {
